* jargon-transfer - transfer manager for managing and synchronizing data with iRODS
* jargon-ticket - support for ticket processing
* jargon-httpstream - stream http content into iRODS via Jargon


==Requirements==

*Jargon depends on Java 1.6+
*Jargon is built using Apache Maven2, see POM for dependencies
*Jargon supports iRODS 2.5 through iRODS 3.2

==Libraries==

Jargon-core uses Maven for dependency management.  See the pom.xml file for references to various dependencies.

Note that the following bug and feature requests are logged in GForge with related commit information [[https://code.renci.org/gf/project/jargon/tracker/]]

==Bug Fixes==
 
 *[#1263] ACL retrieval query and the user lookup queries, the method queries the zone of the user and not the zone containing the collection
 **Added code to properly query the permissions as they exist on the current zone
 
 *[#1139] Spaces at the begin or end of a data object name will cause an exception
 **removed trim() statements in query building to handle intended spaces in file names.  Note that there may be a bug for collection names with
 embedded spaces, this is ignored in the JUNit tests for CollectionAOImpl, and that issue has been routed to iRODS for now.
 
 *[#1243] issues with griffen with jargon 3.2.1.4
 **Remove over-headed create/close/open sequence for IRODSOutputStream creation
 **Reduce calls for objStat, no longer get an objStat on a parent directory, no longer creates parent dir if missing

 *[#1211] Re: [iROD-Chat:9536] jargon mangling UTF-8 characters
 **completed wiring codebase into jargon.properties settings
	 
==Features==

*[#1264] [iROD-Chat:9666] Referencing Data Objects
**Added findById() methods to DataObjectAO and CollectionAO

*[#1172] Jargon enhancements supporting HIVE integration project
**Added new methods to CollectionAO for paging queries by AVU using offsets
**Added row counts and other stats to MetaDataAndDomainData lists for find metadata by metadata query methods