@@ -22,6 +22,11 @@ import org.junit.BeforeClass;
 import org.junit.Ignore;
 import org.junit.Test;
 
+/**
+ * Note that these tests assume localhost right now and will just be ignored if running against a remote host
+ * @author mconway
+ *
+ */
 public class IRODSRegistrationOfFilesAOImplTest {
 
 	private static Properties testingProperties = new Properties();
@@ -65,6 +70,15 @@ public class IRODSRegistrationOfFilesAOImplTest {
 	@Test
 	public final void testRegisterPhysicalCollectionRecursivelyToIRODS()
 			throws Exception {
+		
+		if (!testingPropertiesHelper.isTestRegistration(testingProperties)) {
+			return;
+		}
+		
+		IRODSAccount irodsAccount = testingPropertiesHelper
+				.buildIRODSAccountFromTestProperties(testingProperties);
+		
+		
 		String rootCollection = "testRegisterPhysicalCollectionRecursivelyToIRODS";
 		String localCollectionAbsolutePath = scratchFileUtils
 				.createAndReturnAbsoluteScratchPath(IRODS_TEST_SUBDIR_PATH
@@ -80,8 +94,10 @@ public class IRODSRegistrationOfFilesAOImplTest {
 						"testPutCollectionWithTwoFiles", 1, 1, 1, "testFile",
 						".txt", 2, 2, 1, 2);
 
-		IRODSAccount irodsAccount = testingPropertiesHelper
-				.buildIRODSAccountFromTestProperties(testingProperties);
+		
+		
+		
+		
 		IRODSRegistrationOfFilesAO ao = irodsFileSystem
 				.getIRODSAccessObjectFactory().getIRODSRegistrationOfFilesAO(
 						irodsAccount);
@@ -144,7 +160,7 @@ public class IRODSRegistrationOfFilesAOImplTest {
 			throws Exception {
 
 		if (!testingPropertiesHelper.isTestRegistration(testingProperties)) {
-			return;
+			throw new DuplicateDataException("throw to honor expected error");
 		}
 
 		IRODSAccount irodsAccount = testingPropertiesHelper
@@ -184,7 +200,7 @@ public class IRODSRegistrationOfFilesAOImplTest {
 			throws Exception {
 
 		if (!testingPropertiesHelper.isTestRegistration(testingProperties)) {
-			return;
+			throw new JargonException("throw to honor expected error");
 		}
 
 		String testFileName = "testRegisterPhysicalDataFileToIRODSWhenCollection.txt";
@@ -213,7 +229,7 @@ public class IRODSRegistrationOfFilesAOImplTest {
 			throws Exception {
 
 		if (!testingPropertiesHelper.isTestRegistration(testingProperties)) {
-			return;
+			throw new IllegalArgumentException("throw to honor expected error");
 		}
 
 		IRODSAccount irodsAccount = testingPropertiesHelper
@@ -246,9 +262,8 @@ public class IRODSRegistrationOfFilesAOImplTest {
 			throws Exception {
 
 		if (!testingPropertiesHelper.isTestRegistration(testingProperties)) {
-			return;
+			throw new DataNotFoundException("throw to honor expected error");
 		}
-
 		IRODSAccount irodsAccount = testingPropertiesHelper
 				.buildIRODSAccountFromTestProperties(testingProperties);
 		IRODSRegistrationOfFilesAO ao = irodsFileSystem
@@ -281,7 +296,7 @@ public class IRODSRegistrationOfFilesAOImplTest {
 			throws Exception {
 
 		if (!testingPropertiesHelper.isTestRegistration(testingProperties)) {
-			return;
+			throw new DataNotFoundException("throw to honor expected error");
 		}
 
 		IRODSAccount irodsAccount = testingPropertiesHelper
@@ -558,7 +573,7 @@ public class IRODSRegistrationOfFilesAOImplTest {
 			throws Exception {
 
 		if (!testingPropertiesHelper.isTestRegistration(testingProperties)) {
-			return;
+			throw new DataNotFoundException("throw to honor expected error");
 		}
 
 		IRODSAccount irodsAccount = testingPropertiesHelper
@@ -596,6 +611,11 @@ public class IRODSRegistrationOfFilesAOImplTest {
 	@Test
 	public final void testUnregisterPhysicalCollectionRecursively()
 			throws Exception {
+		
+		if (!testingPropertiesHelper.isTestRegistration(testingProperties)) {
+			return;
+		}
+		
 		String rootCollection = "testUnregisterPhysicalCollectionRecursively";
 		IRODSAccount irodsAccount = testingPropertiesHelper
 				.buildIRODSAccountFromTestProperties(testingProperties);
@@ -648,6 +668,11 @@ public class IRODSRegistrationOfFilesAOImplTest {
 	@Test(expected = CollectionNotEmptyException.class)
 	public final void testUnregisterPhysicalCollectionNoRecursive()
 			throws Exception {
+		
+		if (!testingPropertiesHelper.isTestRegistration(testingProperties)) {
+			throw new CollectionNotEmptyException("throw to honor expected error");
+		}
+		
 		String rootCollection = "testUnregisterPhysicalCollectionNoRecursive";
 		String localCollectionAbsolutePath = scratchFileUtils
 				.createAndReturnAbsoluteScratchPath(IRODS_TEST_SUBDIR_PATH
