@@ -148,7 +148,7 @@
 					</execution>
 				</executions>
 			</plugin>
-
+<!-- 
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>hibernate3-maven-plugin</artifactId>
@@ -178,6 +178,7 @@
 					</componentProperties>
 				</configuration>
 			</plugin>
+			 -->
 		</plugins>
 		<pluginManagement>
 			<plugins>
